2010-03-24	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/lib/pf/vlan.pm: Refactoring pf::vlan according to review
	- custom_getCorrectVlan renamed to get_normal_vlan
	- Pass node_info hashref instead of individual node information to 
	  get_normal_vlan()

2010-03-23	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/lib/pf/vlan.pm: Refactoring pf::vlan according to review
	- Extracted get_violation_vlan out of vlan_determine_for_node for 
	future use by pf::radius
	- Removing node_exist()/node_add_simple condition: it never happens
	- Extracted get_registration_vlan out of vlan_determine_for_node for 
	future use by pf::radius. Created test case in t/vlan.t too.

	* pf/lib/pf/radius.pm: Removed code that I realized was run two times
	for nothing (outlined when I did the tests)

	* pf/t/all.t, pf/t/radius.t: Test for pf::radius

	* pf/lib/pf/radius.pm: Refactoring pf::radius according to review
	- extracted out VoIP handling into its own sub

2010-03-18	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/addons/802.1X/rlm_perl_packetfence_soap.pl, pf/cgi-bin/pdp.cgi,
	pf/lib/pf/radius.pm: Client - Server SOAP interface changes
	Now passing a tuple with radius return code and radius reply for radius
	rlm client soap call. Allows greater flexibility of radius answers from
	the server side without modifying clients.
	Reworked all validation and returned codes in rlm_perl_packetfence 
	module.
	Little modifications required to server side components so it'll all 
	work.

2010-03-17	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/lib/pf/radius.pm: A big chunk of pf::radius rework and general
	improvements, hopefully really close to tests

	* pf/lib/pf/actions.pm, pf/lib/pf/vlan.pm, pf/sbin/pfsetvlan: 
	generalized pf::vlan's shouldAutoRegister and getNodeInfoForAutoReg to 
	work with both pfsetvlan and pf::radius
	Changed all callers

	* pf/lib/pf/SNMP.pm, pf/t/SNMP.t: minor refactoring: extracted code 
	into isManagedVlan() and some tests against it
