@@ -555,12 +555,34 @@ sub _setVlanByOnlyModifyingPvid {
     return ( defined($result) );
 }
 
+=item getVlanByName - get the VLAN number of a given name in switches.conf
+ 
+Input: vlan name (as in switches.conf)
+
+=cut                    
+sub getVlanByName {
+    my ($this, $vlanName) = @_;
+    my $logger = Log::Log4perl::get_logger(ref($this));
+
+    if (!exists($this->{"_".$vlanName})) {
+        # VLAN name doesn't exist
+        $logger->warn("VLAN $vlanName is not a valid VLAN identifier (see switches.conf)");
+        return;
+    }
+    
+    if ($this->{"_".$vlanName} !~ /^\d+$/) {
+        # is not resolved to a valid VLAN number
+        $logger->warn("VLAN $vlanName is not properly configured in switches.conf, not a vlan number");
+        return;
+    }   
+    return $this->{"_".$vlanName};
+}
+
 =item setVlanByName - set the ifIndex VLAN to the VLAN identified by given name in switches.conf
 
 Input: ifIndex, vlan name (as in switches.conf), switch lock
 
 =cut
-# TODO: get rid of the _ character in front of the vlan variables (refactoring)
 sub setVlanByName {
     my ($this, $ifIndex, $vlanName, $switch_locker_ref) = @_;
     my $logger = Log::Log4perl::get_logger(ref($this));
